Closed Bug 1401005 Opened 7 years ago Closed 7 years ago

lld - elfhack test fails

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(firefox58 fixed)

VERIFIED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: Sylvestre, Assigned: glandium)

References

Details

Attachments

(4 files)

Follow up of bug 1391183:

[ $(objdump -R test-ctors.so.bak | wc -l) -gt $(objdump -R test-ctors.so | wc -l) ]
# Will either crash or return exit code 1 if elfhack is broken
LD_PRELOAD=/data/jenkins/workspace/firefox-clang-lld-last/obj-x86_64-pc-linux-gnu/build/unix/elfhack/test-array.so /data/jenkins/workspace/firefox-clang-lld-last/obj-x86_64-pc-linux-gnu/build/unix/elfhack/dummy
FAIL
Attached file test-array.so.bak
Attached file test-array.so
Attached file dummy
(In reply to Sylvestre Ledru [:sylvestre] from comment #0)
> Follow up of bug 1391183:
> 
> [ $(objdump -R test-ctors.so.bak | wc -l) -gt $(objdump -R test-ctors.so |
> wc -l) ]
> # Will either crash or return exit code 1 if elfhack is broken
> LD_PRELOAD=/data/jenkins/workspace/firefox-clang-lld-last/obj-x86_64-pc-
> linux-gnu/build/unix/elfhack/test-array.so
> /data/jenkins/workspace/firefox-clang-lld-last/obj-x86_64-pc-linux-gnu/build/
> unix/elfhack/dummy
> FAIL

You'll note it explicitly says "FAIL". It's *not* crashing.
Summary: lld - dummy binary with the elfhack segsfaults - try 3 → lld - elfhack test fails
Assignee: nobody → mh+mozilla
Comment on attachment 8910568 [details]
Bug 1401005 - Handle the case where the relocation addend is not found at the relocation location.

https://reviewboard.mozilla.org/r/182010/#review187564
Attachment #8910568 - Flags: review?(nfroyd) → review+
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c58ffaa1e410
Handle the case where the relocation addend is not found at the relocation location. r=froydnj
https://hg.mozilla.org/mozilla-central/rev/c58ffaa1e410
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
I will test that but I am blocked by bug 1402362 for now (not related)
Verified, we can build with lld without --disable-elf-hack  \o/
Status: RESOLVED → VERIFIED
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: