Bug 1401005 - Handle the case where the relocation addend is not found at the relocation location. r=froydnj

--HG--
extra : rebase_source : 58c6dfbe9fc584bbbbce2b9739a374a465823b32